--- a/docs/src/pages/how/howTemplate/howTemplate.module.css
+++ b/docs/src/pages/how/howTemplate/howTemplate.module.css
@@ -3,3 +3,10 @@
 	background-color: #f8f8f8;
 	min-height: 450px;
 }
+
+.header {
+	font-family: 'Ubuntu Mono', monospace;
+	position: relative;
+	font-size: 2rem;
+	margin-bottom: 1em;
+}
