clean up and small additions

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -23,8 +23,8 @@
 }
 
 .introduction {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
+	padding-top: 4em;
+	padding-bottom: 4em;
 	text-align: justify;
 }
 
