--- a/docs/src/pages/how/howTerminal/howTerminal.module.css
+++ b/docs/src/pages/how/howTerminal/howTerminal.module.css
@@ -36,13 +36,30 @@
 	color: lightgrey;
 	flex-grow: 1;
 	background-color: #104654;
-	/* background-color: #072932; */
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	padding: 8px;
 }
 
+.terminalLine {
+	margin-bottom: 5px;
+}
+
 .terminalCarrot {
 	color: hotpink;
+	margin-right: 5px;
+}
+
+.terminalPromptSign {
+	color: green;
+	margin-right: 5px;
+}
+
+.terminalPromptQuestion {
+	margin-right: 5px;
+}
+
+.terminalPromptDefault {
+	color: darkgrey;
 	margin-right: 5px;
 }
