--- a/docs/src/pages/_index/how/howTemplate/howTemplate.module.css
+++ b/docs/src/pages/_index/how/howTemplate/howTemplate.module.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-	font-family: 'Ubuntu Mono', monospace;
+	font-family: monospace;
 	position: relative;
 	font-size: 2rem;
 	margin-bottom: 1em;
