Increase font size of website

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -28,3 +28,7 @@
   --ifm-color-primary-lightest: #679CCB;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+body {
+	font-size: 16px;
+}
