--- a/docs/src/pages/_index/how/howTemplate/howTemplate.module.css
+++ b/docs/src/pages/_index/how/howTemplate/howTemplate.module.css
@@ -1,5 +1,6 @@
 .templateContainer {
-	background-color: #f8f8f8;
+	/* background-color: var(--templates-color-home-secondary-bg); */
+	background-color: var(--ifm-color-emphasis-200);
 	min-height: 500px;
 }
 
