--- a/docs/src/pages/_index/how/how.module.css
+++ b/docs/src/pages/_index/how/how.module.css
@@ -18,7 +18,7 @@
 
 .howStep {
 	font-family: monospace;
-	color: grey;
+	color: var(--ifm-color-emphasis-600);
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
