--- a/docs/src/pages/_index/index.module.css
+++ b/docs/src/pages/_index/index.module.css
@@ -8,6 +8,8 @@
 	text-align: center;
 	position: relative;
 	overflow: hidden;
+	color: white;
+	background-color: #254c6d;
 }
 
 @media screen and (max-width: 996px) {
