--- a/docs/docs/components/dot/dot.module.css
+++ b/docs/docs/components/dot/dot.module.css
@@ -14,6 +14,11 @@
 	border-top-right-radius: 0;
 }
 
+.noTemplate {
+	border-top-left-radius: var(--ifm-code-border-radius);
+	border-top-right-radius: var(--ifm-code-border-radius);
+}
+
 .result [class*='codeBlockTitle'] {
 	background-color: #ebedf0;
 }
