Underline all links not in the nav and sidebars

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -34,3 +34,11 @@
 body {
 	font-size: 16px;
 }
+
+/* p a {
+	--ifm-link-decoration: underline
+} */
+
+.markdown a {
+	--ifm-link-decoration: underline
+}
