--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -34,3 +34,15 @@
 body {
 	font-size: 16px;
 }
+
+.markdown a {
+	--ifm-link-decoration: underline;
+}
+
+.table-of-contents__link:hover,
+.table-of-contents__link:hover code,
+.table-of-contents__link--active,
+.table-of-contents__link--active code {
+	--ifm-link-decoration: underline;
+	text-decoration: var(--ifm-link-decoration);
+}
