--- a/docs/src/css/layout.css
+++ b/docs/src/css/layout.css
@@ -7,5 +7,9 @@
 }
 
 .justify-content--center {
-	align-items: center;
+	justify-content: center;
+}
+
+.justify-content--space-between {
+	justify-content: space-between;
 }
