deploy: c2da8173abf264902cf80f99081e51a4e67c57df

--- a/docs/main/templates/express-app.html
+++ b/docs/main/templates/express-app.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://www.googletagmanager.com">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X6LWJQY18G"></script>
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-X6LWJQY18G",{anonymize_ip:!0})</script><link rel="stylesheet" href="/templates/assets/css/styles.1aa5323f.css">
-<script src="/templates/assets/js/runtime~main.92dfa365.js" defer="defer"></script>
+<script src="/templates/assets/js/runtime~main.2785f191.js" defer="defer"></script>
 <script src="/templates/assets/js/main.2a31946d.js" defer="defer"></script>
 </head>
 <body class="navigation-with-keyboard">
@@ -20,10 +20,9 @@
 <div class="theme-admonition theme-admonition-caution admonition_xJq3 alert alert--warning"><div class="admonitionHeading_Gvgb"><span class="admonitionIcon_Rf37"><svg viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8.893 1.5c-.183-.31-.52-.5-.887-.5s-.703.19-.886.5L.138 13.499a.98.98 0 0 0 0 1.001c.193.31.53.501.886.501h13.964c.367 0 .704-.19.877-.5a1.03 1.03 0 0 0 .01-1.002L8.893 1.5zm.133 11.497H6.987v-2.003h2.039v2.003zm0-3.004H6.987V5.987h2.039v4.006z"></path></svg></span>caution</div><div class="admonitionContent_BuS1"><p>This template is in its alpha stage and will be evolving rapidly with new
 features and updates. Changes may include directory structures, Express app
 patterns, and more. We are also planning to support:</p><ul>
-<li>TypeScript</li>
 <li>React</li>
 <li>Modes (production, playground, etc.)</li>
-<li>Databases (Mongo, SQL, etc.)</li>
+<li>Databases (SQL, etc.)</li>
 <li>And
 <a href="https://github.com/users/marcellino-ornelas/projects/2/views/5?pane=issue&amp;itemId=59501342" target="_blank" rel="noopener noreferrer">more...</a></li>
 </ul><p>We welcome your feedback! Feel free to share ideas for tools or frameworks you&#x27;d
