--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -21,7 +21,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-	--ifm-color-primary: #4082bb;
+	--ifm-color-primary: #254c6d;
 	--ifm-color-primary-dark: #3b78ad;
 	--ifm-color-primary-darker: #376fa0;
 	--ifm-color-primary-darkest: #326592;
@@ -29,6 +29,11 @@
 	--ifm-color-primary-lighter: #5993c6;
 	--ifm-color-primary-lightest: #679ccb;
 	--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.footer,
+.footer--dark {
+	--ifm-footer-background-color: #254c6d;
 }
 
 body {
