--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -21,7 +21,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-	--ifm-color-primary: #254c6d;
+	--ifm-color-primary: #4082bb;
 	--ifm-color-primary-dark: #3b78ad;
 	--ifm-color-primary-darker: #376fa0;
 	--ifm-color-primary-darkest: #326592;
