--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -31,6 +31,11 @@
 	--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+.footer,
+.footer--dark {
+	--ifm-footer-background-color: #254c6d;
+}
+
 body {
 	font-size: 16px;
 }
