--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -34,6 +34,7 @@
 .footer,
 .footer--dark {
 	--ifm-footer-background-color: #254c6d;
+	--ifm-footer-link-hover-color: var(--ifm-footer-link-color);
 }
 
 body {
