--- a/docs/main/templates/ai.html
+++ b/docs/main/templates/ai.html
@@ -17,7 +17,7 @@
 
 <link rel="icon" href="/templates/img/templates-logo.ico" type="image/x-icon" media="(prefers-color-scheme: light)">
 <link rel="icon" href="/templates/img/templates-logo-dark.ico" type="image/x-icon" media="(prefers-color-scheme: dark)"><link rel="stylesheet" href="/templates/assets/css/styles.6ad94834.css">
-<script src="/templates/assets/js/runtime~main.44610945.js" defer="defer"></script>
+<script src="/templates/assets/js/runtime~main.936ec7f2.js" defer="defer"></script>
 <script src="/templates/assets/js/main.7616fd3e.js" defer="defer"></script>
 </head>
 <body class="navigation-with-keyboard">
@@ -65,10 +65,12 @@ their credentials. You can refer to the <a href="#ai-providers">AI providers</a>
 for the provider your using to see what environment variable you can use.
 However, the <code>model</code> and <code>provider</code> options will still need to be specified
 using one of our other
-<a href="/templates/docs/main/generating-instance#using-a-templates-options">methods</a>.</p><p>Templates does not load environment variables by default, so you will need to
+<a href="/templates/docs/main/generating-instance#using-a-templates-options">methods</a>.</p><p>When using the Templates CLI, it will load the first <code>.env</code> file it finds while
+walking up parent directories. You can learn more about how environments are
+loaded in our <a href="/templates/docs/main/generating-instance#env">env docs</a>. You can also pass
+environment variables on the command line or
 <a href="https://chlee.co/how-to-setup-environment-variables-for-windows-mac-and-linux/" target="_blank" rel="noopener noreferrer">set these in your shell</a>
-before running the command.</p><div class="theme-admonition theme-admonition-tip admonition_xJq3 alert alert--success"><div class="admonitionHeading_Gvgb"><span class="admonitionIcon_Rf37"><svg viewBox="0 0 12 16"><path fill-rule="evenodd" d="M6.5 0C3.48 0 1 2.19 1 5c0 .92.55 2.25 1 3 1.34 2.25 1.78 2.78 2 4v1h5v-1c.22-1.22.66-1.75 2-4 .45-.75 1-2.08 1-3 0-2.81-2.48-5-5.5-5zm3.64 7.48c-.25.44-.47.8-.67 1.11-.86 1.41-1.25 2.06-1.45 3.23-.02.05-.02.11-.02.17H5c0-.06 0-.13-.02-.17-.2-1.17-.59-1.83-1.45-3.23-.2-.31-.42-.67-.67-1.11C2.44 6.78 2 5.65 2 5c0-2.2 2.02-4 4.5-4 1.22 0 2.36.42 3.22 1.19C10.55 2.94 11 3.94 11 5c0 .66-.44 1.78-.86 2.48zM4 14h5c-.23 1.14-1.3 2-2.5 2s-2.27-.86-2.5-2z"></path></svg></span>tip</div><div class="admonitionContent_BuS1"><p>Templates plans to support loading environment variables automatically from a
-<code>.env</code> file in a future release.</p></div></div></div><div role="tabpanel" class="tabItem_Ymn6" hidden=""><p>You can pass in your preferred AI provider, model, and API token when generating
+before running the command.</p></div><div role="tabpanel" class="tabItem_Ymn6" hidden=""><p>You can pass in your preferred AI provider, model, and API token when generating
 your new instance, as shown below:</p><div class="language-bash codeBlockContainer_Ckt0 theme-code-block" style="--prism-color:#393A34;--prism-background-color:#f6f8fa"><div class="codeBlockContent_biex"><pre tabindex="0" class="prism-code language-bash codeBlock_bY9V thin-scrollbar" style="color:#393A34;background-color:#f6f8fa"><code class="codeBlockLines_e6Vv"><span class="token-line" style="color:#393A34"><span class="token plain">tps ai --llm openai --model gpt-4o --token &lt;token&gt;</span><br></span></code></pre><div class="buttonGroup__atx"><button type="button" aria-label="Copy code to clipboard" title="Copy" class="clean-btn"><span class="copyButtonIcons_eSgA" aria-hidden="true"><svg viewBox="0 0 24 24" class="copyButtonIcon_y97N"><path fill="currentColor" d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"></path></svg><svg viewBox="0 0 24 24" class="copyButtonSuccessIcon_LjdS"><path fill="currentColor" d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"></path></svg></span></button></div></div></div><p>However, this is not recommended because you need to supply these values every
 time you run the CLI command</p></div></div></div>
 <h2 class="anchor anchorWithStickyNavbar_LWe7" id="ai-providers">AI Providers<a href="#ai-providers" class="hash-link" aria-label="Direct link to AI Providers" title="Direct link to AI Providers">​</a></h2>
